Added some styling to homepage and added other .html pages

--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
-    <title>The Playground</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Us</title>
+    
 </head>
 <body>
-    <div>
-        <div>
-            <div>
-
-            </div>
-            <div>
-
-            </div>
-            <div>
-                
-            </div>
+    <nav class="homenav">
+        <img src="" alt="">
+        <div class="homelinks">
+            <a href="chapters/thebeginning.html">The Beginning</a>
+            <a href="chapters/her.html">Her</a>
+            <a href="chapters/love.html">Love</a>
+            <a href="chapters/happiness.html">Happiness</a>
+            <a href="chapters/thequestion.html">The Question?</a>
         </div>
-    </div>
+    </nav>
+    <h1>To the beautiful person I've gotten to create a life with, I love you.</h1>
+
 </body>
 </html>
